# iron-discord-bot

./: .gitignore  Makefile  main.py  pyproject.toml  utils.py
src/: main.py  openai_backend.py  tools.py
