[tool.poetry]
name = "iron-discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
langchain = "^0.0.347"
black = "^23.11.0"
mypy = "^1.7.1"
autoflake = "^2.2.1"
openai = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
